# fsa-decomp

./: .gitignore  BROWSER_PORT_PLAN.md  BROWSER_PORT_PLAN_V2.md  CLAUDE.md  README.md  configure.py  objdiff.json  setup_tools.sh
port-agent/: .gitignore  CLAUDE.md  README.md  pyproject.toml  state.db
port-agent/fsa_port_agent/: __init__.py  __main__.py  call_graph.py  config.py  mwcc.py  state_db.py  supervisor.py  tww_lookup.py  work_queue.py
port-agent/fsa_port_agent/agent/: build.py  cleanup.py  context.py  synthesize.py  triage.py  verify.py
port-agent/fsa_port_agent/dashboard/: server.py
port-agent/fsa_port_agent/dashboard/static/: app.js  index.html  style.css
port-agent/fsa_port_agent/hal/: scaffold.py
port-agent/fsa_port_agent/importers/: sig_match.py  tww_import.py
port-agent/fsa_port_agent/prompts/: cleanup.md  fix_build.md  synthesize.md  type_infer.md
port-agent/fsa_port_agent/shim_include/JSystem/: JSystem.h
port-agent/fsa_port_agent/shim_include/assets/: black_tex.h  font_data.h  g_dTree_Oba_kage_32DL.h  g_dTree_shadowMatDL.h  l_AmastDL.h  l_B_sand2TEX.h  l_DL__4455.h  l_DL__clearAlphaBuffer__FP10view_class.h  l_DL__drawAlphaBuffer__FP10view_class8_GXColor.h  (+86 more)
port-agent/work/cleanup/: batch_cleanup-20260419T194721Z.manifest.json  batch_cleanup-20260419T200948Z.manifest.json  batch_cleanup-20260419T201213Z.manifest.json  batch_cleanup-20260419T201846Z.manifest.json  batch_cleanup-20260419T205900Z.manifest.json  batch_cleanup-20260419T210804Z.manifest.json
port-agent/work/synthesize/: scan_20260419T191744Z.json  scan_20260419T191918Z.json
(+154 files in other folders)
